Fix -Wc++11-narrowing error in SeccompFilters.cpp https://bugs.webkit.org/show_bug.cgi?id=139079

Reviewed by Carlos Garcia Campos.

* Shared/linux/SeccompFilters/SeccompFilters.cpp:
(WebKit::SeccompFilters::addRule):
* Shared/linux/SeccompFilters/SeccompFilters.h:


Canonical link: https://commits.webkit.org/156937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176558 268f45cc-cd09-0410-ab3c-d52691b4dbfc